--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/*General guideline for property order*/
+
+/* Positioning */
+/* Box-model */
+/* Typography */
+/* Visual */
+/* Misc */
+
+/*  Set margin, padding, etc. to 0
+    for better browser rendering   */
 *,
 *::before,
 *::after {
@@ -6,21 +16,93 @@
     box-sizing: border-box;
 }
 
+/* Custom Properties */
+
+:root {
+    --ff-primary: "Source Sans Pro", sans-serif;
+    --ff-secondary: "Source Code Pro", monospace;
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #16e0bd;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25), 0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
+}
+
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+/* General styles */
+
+html {
+    scroll-behavior: smooth;
+}
+
+/* Typography */
+
+h1,
+h2,
+h3 {
+    line-height: 1;
+    margin: 0;
+}
+
+h1 {
+    font-size: var(--fs-h1);
+}
+h2 {
+    font-size: var(--fs-h2);
+}
+h3 {
+    font-size: var(--fs-h3);
+}
+
 .body {
+    /* Positioning */
+    margin: 0;
+
+    /* Box-model */
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
+    /* Typography */
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+    /* Visual */
+    background: var(--clr-light);
+    color: var(--clr-dark);
+    /* Misc */
 }
 
 .main {
+    display: grid;
     flex-grow: 1;
-    display: flex;
-    background-color: #eee;
+    margin: 0 auto;
+    width: 1024px;
+}
+/* Make focus mode */
+.header:hover,
+.footer:hover {
+    background: var(--clr-dark);
+    color: var(--clr-light);
 }
 
 .header,
 .footer {
-    background-color: rgb(46, 29, 29);
-    padding: 1em;
     text-align: center;
 }
