--- a/styles.css
+++ b/styles.css
@@ -89,15 +89,19 @@ h3 {
     /* Misc */
 }
 
+.container {
+    max-width: 1024px;
+    min-height: 80vh;
+    margin: 0 auto;
+}
+
 .main {
     /* Positioning */
-    margin: 0 auto;
     padding: 1em;
     /* Box-model */
     display: grid;
     grid-template-columns: auto;
     flex-grow: 1;
-    max-width: 1024px;
     justify-items: stretch;
     align-items: stretch;
     /* Typography */
@@ -111,9 +115,6 @@ h3 {
     padding: 1em;
     /* Typography */
     /* Visual */
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 
     /* Misc */
 }
@@ -130,6 +131,24 @@ h3 {
     }
 }
 
+.btn {
+    display: inline-block;
+    cursor: pointer;
+    padding: 0.5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
 /* Make focus mode */
 .header:hover,
 .footer:hover,
@@ -141,4 +160,10 @@ h3 {
 .header,
 .footer {
     text-align: center;
+}
+
+.code {
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    padding: 1em;
 }
